--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <title>Epic Soundboard</title>
 	<meta name="Chris" content=""/>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="scripts.js" type="text/javascript">
-		
+		var playing = ""
+		$(".music-btn").on("click", function(){
+			//		$("#music-btn").play();
+			alert("playing!");
+		});
 	</script>
 </head>
 <body>
 	<section class="music-board">
-		<div class="music-btn" id="epic-btn"  onclick="document.getElementById('epic-music').play()">
+		<div class="music-btn" id="epic-btn">
+			<div class="slider-bg">
+				<div class="slider"></div>
+			</div>
 			<audio id="epic-music" preload="auto" src="music/Soaring-Theme.mp3">
+			</audio>
+		</div>
+		
+		<div class="music-btn" id="walk-btn">
+			<audio id="walk-music" preload="auto" src="music/Mongalien-March.mp3">
 			</audio>
 		</div>
 		
