Sliders work when another button is clicked.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		</div>
 		
 		<div class="music-btn" id="walk-btn">
+			<div class="slider-bg">
+				<div class="slider"></div>
+			</div>
 			<audio id="walk-music" preload="auto" src="music/Mongalien-March.mp3">
 			</audio>
 		</div>
